# KVIS-Quora

./: .replit  README.md  auth.py  db.sqlite  initial.py  main.py  models.py  pyproject.toml  runner.py
instance/: db.sqlite
templates/: 404.html  ask.html  base.html  index.html  login.html  newpass.html  profile.html  question_path.html  reset.html  signup.html  use_otp.html
templates/admin/: base.html  edit_questions.html  questions.html  users.html
