[tool.poetry]
name = "kapolquora"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.5.1"
flask = "^1.1.2"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
